fix: slider overflow

--- a/index.css
+++ b/index.css
@@ -518,6 +518,8 @@ input[type='file'] {
 
 .sertification .swiper-container {
     position: relative;
+    overflow: hidden;
+    margin: auto;
 }
 
 .sertification__titleContainer > * {
